hope is going to work